coronarteenc8 index e favicon

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -9,6 +9,7 @@
 		<title>Ajuda</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -25,16 +26,17 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ajuda</h1>
-								<p>Ajuda para os problemas pessoais mais relevantes.</p>
+								<p>Calma, respire fundo três vezes.<br>
+								Precisa de ajuda com o quê?</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Meu sonho</a></li>
-								<li><a href="#work">Pornografia</a></li>
-								<li><a href="#about">Procrastinação</a></li>
-								<li><a href="#about">Relações Amorosas</a></li>
-								<li><a href="#elements">Contato</a></li>
+								<li><a href="#sonho">Meu sonho</a></li>
+								<li><a href="#pornografia">Pornografia</a></li>
+								<!--li><a href="#procrastinacao">Procrastinação</a></li>
+								<!--li><a href="#relacoesamorosas">Relações Amorosas</a></li>
+								<!--li><a href="#meditacoes">Meditações</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -43,57 +45,54 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
+						<!-- Sonho -->
+							<article id="sonho">
+								<h2 class="major">Meu sonho</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>O nosso sonho é ter uma vida plena e rica de sentido que possibilite mais pessoas serem tem uma vida assim também. Uma parte fundamental desse sonho é que meu corpo e mente estejam bem e consigam lidar da melhor forma possível com os impecilhos que irão se apresentar.</p>
+								<p>Um dos pensamentos principais do nosso sonhos é se ligar a outros projetos de realidade, como a <a href="https://www.instagram.com/sociedadedobemviver/">Sociedade do Bem Viver</a>. </p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+						<!-- Pornografia -->
+							<article id="pornografia">
+								<h2 class="major">Pornografia</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p><a href="https://forms.gle/DaifsXy969Sx42E99" class="button icon solid fa-pencil-alt">Clique aqui para anotar o que está sentindo</a></p>
+								<h3>Resumo do <a href="https://s3-us-west-2.amazonaws.com//fortify-production/uploads/resources/share/pdf/969671521/attachment_1509802491.9104037.pdf">processo</a></h3>
+								<ol>
+									<li>Observe quando seus desejos começam a aparecer</li>
+									<li>Comece o mantra</li>
+									<li>Guie o seu coração de volta para a âncora</li>
+								</ol>
+								<h3>Mantra</h3>
+								<p>Mantra para o momento de impulso: "Foco. Foco. Foco. Foco. Foco...".</p>
+								<h3>Âncoras</h3>
+									<ul>
+										<li>A Juliana (por ser minha melhor amiga e a pornografia afetar nossa amizade)</li>
+										<li>Ter uma vida social com compaixão;</li>
+										<li>A intenção de erradicar a desigualdade de gênero e o machismo de mim.</li>
+									</ul>
 							</article>
 
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+						<!-- Procrastinação -->
+							<article id="procrastinacao">
+								<h2 class="major">Procrastinação</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<!-- Relações amorosas -->
+							<article id="relacoesamorosas">
+								<h2 class="major">Relações Amorosas</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+							</article>
+
+						<!-- Meditações -->
+							<article id="meditacoes">
+								<h2 class="major">Meditaões</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 								</ul>
 							</article>
 
@@ -278,7 +277,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<li><a href="#" class="button small">Small</a></li>
 									</ul>
 									<ul class="actions">
-										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
+										<li><a href="https://forms.gle/DaifsXy969Sx42E99" class="button primary icon solid fa-user-edit">Anotar</a></li>
 										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
 									</ul>
 									<ul class="actions">
@@ -343,7 +342,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">Que você seja capaz de ajudar aos outros e que encontre nisso a sua felicidade.</p>
 					</footer>
 
 			</div>
