pic02 e index c mantra novo

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -26,13 +26,12 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ajuda</h1>
-								<p>Calma, respire fundo três vezes.<br>
-								Precisa de ajuda com o quê?</p>
+								<p>Você precisa de ajuda com o quê?</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#sonho">Meu sonho</a></li>
+								<li><a href="#sonho">Sonho</a></li>
 								<li><a href="#pornografia">Pornografia</a></li>
 								<!--li><a href="#procrastinacao">Procrastinação</a></li>
 								<!--li><a href="#relacoesamorosas">Relações Amorosas</a></li>
@@ -50,6 +49,7 @@
 								<h2 class="major">Meu sonho</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>O nosso sonho é ter uma vida plena e rica de sentido que possibilite mais pessoas serem tem uma vida assim também. Uma parte fundamental desse sonho é que meu corpo e mente estejam bem e consigam lidar da melhor forma possível com os impecilhos que irão se apresentar.</p>
+								<p>Quero ter uma vida baseada na compaixão.</p>
 								<p>Um dos pensamentos principais do nosso sonhos é se ligar a outros projetos de realidade, como a <a href="https://www.instagram.com/sociedadedobemviver/">Sociedade do Bem Viver</a>. </p>
 							</article>
 
@@ -61,16 +61,18 @@
 								<h3>Resumo do <a href="https://s3-us-west-2.amazonaws.com//fortify-production/uploads/resources/share/pdf/969671521/attachment_1509802491.9104037.pdf">processo</a></h3>
 								<ol>
 									<li>Observe quando seus desejos começam a aparecer</li>
-									<li>Comece o mantra</li>
+									<li>Comece a recitar o mantra</li>
 									<li>Guie o seu coração de volta para a âncora</li>
 								</ol>
 								<h3>Mantra</h3>
-								<p>Mantra para o momento de impulso: "Foco. Foco. Foco. Foco. Foco...".</p>
+								<p>"Me distanciar da pornografia me fará sentir maior liberdade. Me distanciar da pornografia me fará um homem mais feliz."</p>
 								<h3>Âncoras</h3>
 									<ul>
-										<li>A Juliana (por ser minha melhor amiga e a pornografia afetar nossa amizade)</li>
-										<li>Ter uma vida social com compaixão;</li>
-										<li>A intenção de erradicar a desigualdade de gênero e o machismo de mim.</li>
+										<li>A Juliana (por ser minha melhor amiga e a pornografia afetar minha perspectiva quando vejo ela).</li>
+										<li>A Ursula, a Amandha, todas pessoas que eu poderia ter me conectado mais profundamente, mas a influência da misoginia prejudicou.</li>
+										<li>Me sentir verdadeiramente livre dos constrangimentos que me imponho a partir do "modo de ser homem".</li>
+										<li>Ter uma vida social baseada na compaixão.</li>
+										<li>Tirar de mim a objetificação das mulheres e essa mente julgadora no geral que julga os corpos antes de qualuqer outra coisa.</li>
 									</ul>
 							</article>
 
@@ -342,7 +344,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">Que você seja capaz de ajudar aos outros e que encontre nisso a sua felicidade.</p>
+						<p class="copyright">Respire fundo três vezes.</p>
 					</footer>
 
 			</div>
