correção texto do clique aqui

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -57,7 +57,7 @@
 							<article id="pornografia">
 								<h2 class="major">Pornografia</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><a href="https://forms.gle/DaifsXy969Sx42E99" class="button icon solid fa-pencil-alt">Clique aqui para anotar o que está sentindo</a></p>
+								<p><a href="https://forms.gle/DaifsXy969Sx42E99" class="button icon solid fa-pencil-alt">Anote aqui o que está sentindo</a></p>
 								<h3>Resumo do <a href="https://s3-us-west-2.amazonaws.com//fortify-production/uploads/resources/share/pdf/969671521/attachment_1509802491.9104037.pdf">processo</a></h3>
 								<ol>
 									<li>Observe quando seus desejos começam a aparecer</li>
