troca de misoginia pra patriarcado

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -69,7 +69,7 @@
 								<h3>Âncoras</h3>
 									<ul>
 										<li>A Juliana (por ser minha melhor amiga e a pornografia afetar minha perspectiva quando vejo ela).</li>
-										<li>A Ursula, a Amandha, todas pessoas que eu poderia ter me conectado mais profundamente, mas a influência da misoginia prejudicou.</li>
+										<li>A Ursula, a Amandha, todas pessoas que eu poderia ter me conectado mais profundamente, mas a influência do patriarcado impossibilitou.</li>
 										<li>Me sentir verdadeiramente livre dos constrangimentos que me imponho a partir do "modo de ser homem".</li>
 										<li>Ter uma vida social baseada na compaixão.</li>
 										<li>Tirar de mim a objetificação das mulheres e essa mente julgadora no geral que julga os corpos antes de qualuqer outra coisa.</li>
