--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#sonho">Sonho</a></li>
 								<li><a href="#pornografia">Pornografia</a></li>
-								<!--li><a href="#procrastinacao">Procrastinação</a></li>
+								<li><a href="#visualizacoes">Visualizações</a></li>
 								<!--li><a href="#relacoesamorosas">Relações Amorosas</a></li>
 								<!--li><a href="#meditacoes">Meditações</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -61,11 +61,12 @@
 								<h3>Resumo do <a href="https://s3-us-west-2.amazonaws.com//fortify-production/uploads/resources/share/pdf/969671521/attachment_1509802491.9104037.pdf">processo</a></h3>
 								<ol>
 									<li>Observe quando seus desejos começam a aparecer</li>
-									<li>Comece a recitar o mantra</li>
+									<li>Comece a ler algumas vezes a motivação</li>
 									<li>Guie o seu coração de volta para a âncora</li>
 								</ol>
-								<h3>Mantra</h3>
-								<p>"Me distanciar da pornografia me fará sentir maior liberdade. Me distanciar da pornografia me fará um homem mais feliz."</p>
+								<h3>Motivação</h3>
+								<p>"Me distanciar da pornografia me fará sentir maior liberdade." </p>" 
+								<p>"Me distanciar da pornografia me fará um homem mais feliz."</p>
 								<h3>Âncoras</h3>
 									<ul>
 										<li>A Juliana (por ser minha melhor amiga e a pornografia afetar minha perspectiva quando vejo ela).</li>
@@ -74,13 +75,18 @@
 										<li>Ter uma vida social baseada na compaixão.</li>
 										<li>Tirar de mim a objetificação das mulheres e essa mente julgadora no geral que julga os corpos antes de qualuqer outra coisa.</li>
 									</ul>
+								<p><a href="#visualizacoes" class="button">Ir para as visualizações</a></p>
 							</article>
 
 						<!-- Procrastinação -->
-							<article id="procrastinacao">
-								<h2 class="major">Procrastinação</h2>
+							<article id="visualizacoes">
+								<h2 class="major">Visualizações</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<ul class="actions">
+									<li><a href="images/visu/gp1.PNG" class="button primary">Visualização sobre Garotas de Prog.</a></li>
+									<li><a href="images/visu/visuSab1.PNG" class="button primary">Visualização sobre autosabotagem com P.</a></li>	
+									<li><a href="images/visu/visuSab2.PNG" class="button primary">Visualização sobre autosabotagem com Mast.</a></li>	
+
 							</article>
 
 						<!-- Relações amorosas -->
