correcao nas visu
troquei li para p

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -82,10 +82,9 @@
 							<article id="visualizacoes">
 								<h2 class="major">Visualizações</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<ul class="actions">
-									<li><a href="images/visu/gp1.PNG" class="button primary">Visualização sobre Garotas de Prog.</a></li>
-									<li><a href="images/visu/visuSab1.PNG" class="button primary">Visualização sobre autosabotagem com P.</a></li>	
-									<li><a href="images/visu/visuSab2.PNG" class="button primary">Visualização sobre autosabotagem com Mast.</a></li>	
+								<p><a href="images/visu/gp1.PNG" class="button primary">Visualização sobre Garotas de Prog.</a></p>
+								<p><a href="images/visu/visuSab1.PNG" class="button primary">Visualização sobre autosabotagem com P.</a></p>	
+								<p><a href="images/visu/visuSab2.PNG" class="button primary">Visualização sobre autosabotagem com Mast.</a></p>	
 
 							</article>
 
