coloquei br na visu

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -82,8 +82,8 @@
 							<article id="visualizacoes">
 								<h2 class="major">Visualizações</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p><a href="images/visu/gp1.PNG" class="button primary">Visualização sobre Garotas de Prog.</a></p>
-								<p><a href="images/visu/visuSab1.PNG" class="button primary">Visualização sobre autosabotagem com P.</a></p>	
+								<p><a href="images/visu/gp1.PNG" class="button primary">Visualização sobre Garotas de Prog.</a></p><br>
+								<p><a href="images/visu/visuSab1.PNG" class="button primary">Visualização sobre autosabotagem com P.</a></p><br>	
 								<p><a href="images/visu/visuSab2.PNG" class="button primary">Visualização sobre autosabotagem com Mast.</a></p>	
 
 							</article>
