tirei aspas extras da secao P

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -65,7 +65,7 @@
 									<li>Guie o seu coração de volta para a âncora</li>
 								</ol>
 								<h3>Motivação</h3>
-								<p>"Me distanciar da pornografia me fará sentir maior liberdade." </p>" 
+								<p>"Me distanciar da pornografia me fará sentir maior liberdade." </p> 
 								<p>"Me distanciar da pornografia me fará um homem mais feliz."</p>
 								<h3>Âncoras</h3>
 									<ul>
