inserido a primeira parte de audios no ajuda

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#sonho">Sonho</a></li>
 								<li><a href="#pornografia">Pornografia</a></li>
 								<li><a href="#visualizacoes">Visualizações</a></li>
-								<!--li><a href="#relacoesamorosas">Relações Amorosas</a></li>
+								<li><a href="#audios">Áudios</a></li>
 								<!--li><a href="#meditacoes">Meditações</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -51,6 +51,8 @@
 								<p>O nosso sonho é ter uma vida plena e rica de sentido que possibilite mais pessoas serem tem uma vida assim também. Uma parte fundamental desse sonho é que meu corpo e mente estejam bem e consigam lidar da melhor forma possível com os impecilhos que irão se apresentar.</p>
 								<p>Quero ter uma vida baseada na compaixão.</p>
 								<p>Um dos pensamentos principais do nosso sonhos é se ligar a outros projetos de realidade, como a <a href="https://www.instagram.com/sociedadedobemviver/">Sociedade do Bem Viver</a>. </p>
+								<p>Quero utilizar ferramentas de criação (de imagens, vídeos e websites) para divulgar/comunicar essas criações para um público que eu quero através de eficientes métodos de marketing e de publicidade. Eu quero que o conteúdo do que eu crie seja atravessado pelos conhecimentos das ciências sociais, da psicologia e do budismo. Quero ser um agente importante em movimentos sociais que tenham a compaixão como pedra fundamental.</p>
+								<p>OBS: Essa seção e os textos daqui precisam ainda ser aperfeiçoados para refletir com ainda maior precisão o que eu penso e também levar em consideração mais fatores da  realidade.</p>
 							</article>
 
 						<!-- Pornografia -->
@@ -89,10 +91,55 @@
 							</article>
 
 						<!-- Relações amorosas -->
-							<article id="relacoesamorosas">
-								<h2 class="major">Relações Amorosas</h2>
+							<article id="audios">
+								<h2 class="major">Áudios</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<h3>Áudios do UCSM</h3>
+								<h4>3ª Semana</h4>
+								<p>Autocomp. deveria ser natural, mas nossa sociedade impede isso</p>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/autocompaixaoDeveriaSerNatural.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
+								<p>Cultivar Conexão sem Fazer Nada</p>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/cultivarconexaosemfazernada.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/diferencaAutopiedadeAutocomp.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
+								<p>Passar tempo sozinho para beneficiar os outros</p>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/momentossozinhossaoimportantesparaosoutros.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
+								<p>Não se definir por algo</p>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/naosedefinirporalgo.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
+								<p>Nascer para os outros criativamente</p>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/nascerParaOsOutrosCriativamente.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
+								<p>Não precisar fazer nada para ser alguém</p>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/nPrecisarFazerNadaPSerAlguem.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
+								<p>O que fazer quando o outro não quer ajuda?</p>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/oquefazerqndooutronaoquerajuda.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
+								<p>Pergunta crucial final</p>
+								<audio controls>
+								  <source src="audio/UCSM/sem3/perguntacrucialfinal.mp3" type="audio/mpeg">
+								Seu navegador não suporta a tag áudio
+								</audio>
 							</article>
 
 						<!-- Meditações -->
