--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -96,50 +96,61 @@
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<h3>Áudios do UCSM</h3>
 								<h4>3ª Semana</h4>
-								<p>Autocomp. deveria ser natural, mas nossa sociedade impede isso</p>
+
+								<h5>Autocomp. deveria ser natural, mas nossa sociedade impede isso</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/autocompaixaoDeveriaSerNatural.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/autocompaixaoDeveriaSerNatural.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
-								<p>Cultivar Conexão sem Fazer Nada</p>
+
+								<h5>Cultivar Conexão sem Fazer Nada</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/cultivarconexaosemfazernada.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/cultivarconexaosemfazernada.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
+
+								<h5>Diferença entre autopiedade e autocompaixão</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/diferencaAutopiedadeAutocomp.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/diferencaAutopiedadeAutocomp.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
-								<p>Passar tempo sozinho para beneficiar os outros</p>
+
+								<h5>Passar tempo sozinho para beneficiar os outros</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/momentossozinhossaoimportantesparaosoutros.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/momentossozinhossaoimportantesparaosoutros.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
-								<p>Não se definir por algo</p>
+
+								<h5>Não se definir por algo</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/naosedefinirporalgo.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/naosedefinirporalgo.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
-								<p>Nascer para os outros criativamente</p>
+
+								<h5>Nascer para os outros criativamente</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/nascerParaOsOutrosCriativamente.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/nascerParaOsOutrosCriativamente.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
-								<p>Não precisar fazer nada para ser alguém</p>
+
+								<h5>Não precisar fazer nada para ser alguém</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/nPrecisarFazerNadaPSerAlguem.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/nPrecisarFazerNadaPSerAlguem.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
-								<p>O que fazer quando o outro não quer ajuda?</p>
+
+								<h5>O que fazer quando o outro não quer ajuda?</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/oquefazerqndooutronaoquerajuda.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/oquefazerqndooutronaoquerajuda.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
-								<p>Pergunta crucial final</p>
+
+								<h5>Pergunta crucial final</h5>
 								<audio controls>
-								  <source src="audio/UCSM/sem3/perguntacrucialfinal.mp3" type="audio/mpeg">
+								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/perguntacrucialfinal.mp3" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
+
 							</article>
 
 						<!-- Meditações -->
