--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -99,7 +99,7 @@
 
 								<h5>Autocomp. deveria ser natural, mas nossa sociedade impede isso</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/autocompaixaoDeveriaSerNatural.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/autocompaixaoDeveriaSerNatural.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
