correcao final dos audios

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -105,49 +105,49 @@
 
 								<h5>Cultivar Conexão sem Fazer Nada</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/cultivarconexaosemfazernada.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/cultivarconexaosemfazernada.mp3.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
 								<h5>Diferença entre autopiedade e autocompaixão</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/diferencaAutopiedadeAutocomp.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/diferencaAutopiedadeAutocomp.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
 								<h5>Passar tempo sozinho para beneficiar os outros</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/momentossozinhossaoimportantesparaosoutros.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/momentossozinhossaoimportantesparaosoutros.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
 								<h5>Não se definir por algo</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/naosedefinirporalgo.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/naosedefinirporalgo.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
 								<h5>Nascer para os outros criativamente</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/nascerParaOsOutrosCriativamente.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/nascerParaOsOutrosCriativamente.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
 								<h5>Não precisar fazer nada para ser alguém</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/nPrecisarFazerNadaPSerAlguem.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/nPrecisarFazerNadaPSerAlguem.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
 								<h5>O que fazer quando o outro não quer ajuda?</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/oquefazerqndooutronaoquerajuda.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/oquefazerqndooutronaoquerajuda.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
 								<h5>Pergunta crucial final</h5>
 								<audio controls>
-								  <source src="https://raw.githubusercontent.com/attrindade/attrindade.github.io/ajuda/audio/UCSM/Sem3/perguntacrucialfinal.mp3" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/perguntacrucialfinal.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
