--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -105,7 +105,7 @@
 
 								<h5>Cultivar Conexão sem Fazer Nada</h5>
 								<audio controls>
-								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/cultivarconexaosemfazernada.mp3.mp3?raw=true" type="audio/mpeg">
+								  <source src="https://github.com/attrindade/attrindade.github.io/blob/master/ajuda/audio/UCSM/Sem3/cultivarconexaosemfazernada.mp3?raw=true" type="audio/mpeg">
 								Seu navegador não suporta a tag áudio
 								</audio>
 
