correcoes no ajuda

--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -62,25 +62,30 @@
 								<p><a href="https://forms.gle/DaifsXy969Sx42E99" class="button icon solid fa-pencil-alt">Anote aqui o que está sentindo</a></p>
 								<h3>Resumo do <a href="https://s3-us-west-2.amazonaws.com//fortify-production/uploads/resources/share/pdf/969671521/attachment_1509802491.9104037.pdf">processo</a></h3>
 								<ol>
-									<li>Observe quando seus desejos começam a aparecer</li>
-									<li>Comece a ler algumas vezes a motivação</li>
-									<li>Guie o seu coração de volta para a âncora</li>
+									<li>Observe os desejos</li>
+									<li>Leia algumas vezes a motivação</li>
+									<li>Contemple sobre as âncoras</li>
 								</ol>
 								<h3>Motivação</h3>
-								<p>"Me distanciar da pornografia me fará sentir maior liberdade." </p><br> 
-								<p>"Me distanciar da pornografia me fará um homem mais feliz."</p>
+								<p>
+								<li>"Me distanciar da pornografia me fará sentir maior liberdade." </li>
+								<li>"Me distanciar da pornografia me fará um homem mais feliz."</li>
+								</p>
 								<h3>Âncoras</h3>
-									<ul>
-										<li>A Juliana (por ser minha melhor amiga e a pornografia afetar minha perspectiva quando vejo ela).</li>
+
+										<li>Os meus relacionamentos atuais e futuros. Continuando com a pornografia ou a prostituição eles irão se danificar.</li>
 										<li>A Ursula, a Amandha, todas pessoas que eu poderia ter me conectado mais profundamente, mas a influência do patriarcado impossibilitou.</li>
 										<li>Me sentir verdadeiramente livre dos constrangimentos que me imponho a partir do "modo de ser homem".</li>
 										<li>Ter uma vida social baseada na compaixão.</li>
 										<li>Tirar de mim a objetificação das mulheres e essa mente julgadora no geral que julga os corpos antes de qualuqer outra coisa.</li>
 									</ul>
+							<pp></p>
+								
 								<p><a href="#visualizacoes" class="button">Ir para as visualizações</a></p>
 							</article>
 
-						<!-- Procrastinação -->
+						<!-- Procrastin
+ação -->
 							<article id="visualizacoes">
 								<h2 class="major">Visualizações</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
@@ -406,8 +411,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<p class="copyright">Respire fundo três vezes.</p>
+					<footer id="fo		<p class="copyright">Respire fundo três vezes.</p>
 					</footer>
 
 			</div>
