--- a/ajuda/index.html
+++ b/ajuda/index.html
@@ -411,7 +411,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 
 				<!-- Footer -->
-					<footer id="fo		<p class="copyright">Respire fundo três vezes.</p>
+					<footer id="footer" <p class="copyright"> Respire fundo </p>
 					</footer>
 
 			</div>
